<resources>
    <string name="app_name">TransportAPP</string>
    <string name="default_notification_channel_id" translatable="false">default_channel</string>
    <string name="title_activity_login">TransportApp</string>
    <string name="prompt_password">Ingrese la contraseña</string>
    <string name="action_sign_in_short">Iniciar Sesión</string>//
    <string name="prompt_email">Ingrese el correo</string>
    <string name="title_activity_menu">TransportApp</string>
    <string name="navigation_drawer_open">Registrar</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BIENVENIDO !</string>
    <string name="nav_header_subtitle">Gestión de Transporte ICBF</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Atrás</string>
    <string name="administracion">Administrar Usuario</string>
    <string name="calendario">Fecha</string>
    <string name="navegar">Adelante</string>
    <string name="menu_home">Inicio</string>
    <string name="agendaDestino">Destino</string>
    <string name="agendaPasajero">Número de pasajeros</string>
    <string name="agendaOrigen">Origen</string>
    <string name="agendaBoton">Agendar</string>
    <string name="dia1">Dom</string>
    <string name="dia2">Lun</string>
    <string name="dia3">Mar</string>
    <string name="dia4">Mie</string>
    <string name="dia5">Jue</string>
    <string name="dia6">Vie</string>
    <string name="dia7">Sab</string>
    <string name="menu">Menú</string>
    <string name="menuNove">Novedad</string>
    <string name="menu_gallery">Registrar Usuario</string>
    <string name="agenda">Ver Agenda</string>
    <string name="menu_slideshow">Registrar Vehículo</string>
    <string name="menu_tools">Actualizar Datos</string>
    <string name="menu_share">Eliminar Usuario</string>
    <string name="menu_ver">Agendar Recorrido</string>
    <string name="menu_send">Cerrar Sesión</string>
    <string name="origen">Ingrese el Origen</string>
    <string name="destino">Ingrese el Destino</string>
    <string name="regArea">Ingrese Área</string>
    <string name="regNom">Ingrese Nombre</string>
    <string name="regApe">Ingrese Primer Apellido</string>
    <string name="regApell">Ingrese Segundo Apellido</string>
    <string name="regTel">Ingrese Número Teléfono</string>
    <string name="regCed">Ingrese Número Cedula</string>
    <string name="regMar">Ingrese la marca del vehiculo</string>
    <string name="regPas">Ingrese Número Pasajeros</string>
    <string name="areaCarro">Ingrese Área del Carro</string>
    <string name="regModelo">Ingrese Modelo</string>
    <string name="regPlaca">Ingrese la placa del vehiculo</string>
    <string name="regEstado">Ingrese Estado</string>
    <string name="etiqueta">Lista de Usuarios</string>
    <string name="etiqueta1">Lista de Recorrido</string>
    <string name="destinoListado">Destino</string>
    <string name="horaListado">Hora Salida</string>
    <string name="fechaListado">Fecha Salida</string>
    <string name="reemplazo">Placa vehículo que reemplaza</string>
    <string name="motivo">Indique el motivo de novedad</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_agenda">DEBE INGRESAR LOS DATOS</string>
</resources>
