<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/registrousuario"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/registrocarro"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/administrar"
            android:title="@string/administracion" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/agenda"
            android:title="@string/agenda" />
        <item
            android:id="@+id/agendar"
            android:icon="@drawable/agendar"
            android:title="@string/menu_ver" />

    </group>



</menu>
