<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ActualizarActivity">

    <EditText
        android:id="@+id/campoMailAc"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"></EditText>

    <EditText
        android:id="@+id/campoPassAc"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"></EditText>

    <EditText
        android:id="@+id/campoTelefonoAc"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/regTel"
        android:inputType="phone"
        android:padding="10dp"
        android:selectAllOnFocus="true"></EditText>

    <EditText
        android:id="@+id/campoAreaAc"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:hint="@string/regArea"
        android:selectAllOnFocus="true"></EditText>

    <TextView
        android:id="@+id/etiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/etiqueta"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listaDatos"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>