<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_vertical"
    android:padding="30dp"
    tools:context=".DatosUsuarioActivity">

    <TextView
        android:id="@+id/campoMailUser"
        android:layout_width="267dp"
        android:layout_height="39dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingTop="10dp"
        android:selectAllOnFocus="true"></TextView>

    <EditText
        android:id="@+id/campoPassUser"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"></EditText>

    <EditText
        android:id="@+id/campoTelefonoUser"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/regTel"
        android:inputType="phone"
        android:padding="10dp"
        android:selectAllOnFocus="true"></EditText>

    <EditText
        android:id="@+id/campoAreaUser"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:hint="@string/regArea"
        android:selectAllOnFocus="true"></EditText>

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="194dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:hint="@string/menu_tools"
        android:textColorHint="@android:color/white"></Button>


</LinearLayout>