<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_vertical"
    android:padding="40dp"
    tools:context=".VehiculoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/campoMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/regMar"
            android:selectAllOnFocus="true"></EditText>

        <EditText
            android:id="@+id/campoModelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/regModelo"
            android:selectAllOnFocus="true"></EditText>

        <EditText
            android:id="@+id/campoPlaca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/regPlaca"
            android:selectAllOnFocus="true"></EditText>

        <EditText
            android:id="@+id/campoPasajeros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:hint="@string/regPas"
            android:selectAllOnFocus="true"></EditText>

        <EditText
            android:id="@+id/areaCarro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/areaCarro"
            android:selectAllOnFocus="true"></EditText>

        <Button
            android:id="@+id/btRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="13dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/navigation_drawer_open"
            android:textColorHint="@android:color/white"></Button>

    </LinearLayout>
    </ScrollView>


</LinearLayout>