<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ActualizarActivity">

    <TextView
        android:id="@+id/campoDestino"
        android:layout_width="267dp"
        android:layout_height="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/destinoListado"></TextView>

    <TextView
        android:id="@+id/campoHora"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_horizontal"
        android:hint="@string/horaListado"
        android:padding="10dp"></TextView>

    <TextView
        android:id="@+id/campoFecha"
        android:layout_width="267dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_margin="8dp"
        android:padding="10dp"
        android:hint="@string/fechaListado"></TextView>

    <TextView
        android:id="@+id/etiquetaAgenda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/etiqueta1"
        android:textColor="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listaInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>