<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/calendario">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimaryDark">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/atras"
            android:background="@drawable/atras"
            android:layout_margin="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="3"
            android:gravity="center"
            android:id="@+id/fecha"
            android:text="@string/calendario"
            android:textColor="@color/colorLetra"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/adelante"
            android:background="@drawable/adelante"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@color/segundoFondo">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia1"
            android:textColor="@color/colorLetra"
            android:background="@color/dia1"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia2"
            android:textColor="@color/colorLetra"
            android:background="@color/dia2"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia3"
            android:textColor="@color/colorLetra"
            android:background="@color/dia3"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia4"
            android:textColor="@color/colorLetra"
            android:background="@color/dia4"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia5"
            android:textColor="@color/colorLetra"
            android:background="@color/dia5"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia6"
            android:textColor="@color/colorLetra"
            android:background="@color/dia6"
            android:layout_weight="1"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp"
            android:text="@string/dia7"
            android:textColor="@color/colorLetra"
            android:background="@color/dia7"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </LinearLayout>

    <GridView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vista_columna"
        android:numColumns="7" >
    </GridView>

</LinearLayout>