<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_gravity="center_vertical"
    android:padding="40dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/campoCorreoL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:inputType="textEmailAddress"
            android:hint="@string/prompt_email"
            android:selectAllOnFocus="true"></EditText>

        <EditText
            android:id="@+id/campoPasswordL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="10dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:hint="@string/prompt_password"
            android:selectAllOnFocus="true"></EditText>

        <Button
            android:id="@+id/btnRegistrarL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/action_sign_in_short"
            android:textColorHint="@android:color/white"></Button>

    </LinearLayout>

</LinearLayout>