<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioActivity">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

    <GridLayout
        android:layout_width="401dp"
        android:layout_height="407dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.599">

        <Button
            android:id="@+id/agenda_recor"
            android:layout_width="148dp"
            android:layout_height="142dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/menu_ver"
            android:textColor="@color/colorLetra"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ver_book"
            android:layout_width="148dp"
            android:layout_height="142dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/agenda"
            android:textColor="@color/colorLetra"
            android:textSize="18dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/actuali_datos"
            android:layout_width="148dp"
            android:layout_height="142dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/administracion"
            android:textColor="@color/colorLetra"
            android:textSize="18dp"
            android:textStyle="bold" />

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>